--- a/ReversiApp/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/ReversiApp/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,8 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿
+@using ReversiApp.Models;
+
+
+@inject SignInManager<Users> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
