--- a/ReversiApp/Views/Shared/_Layout.cshtml
+++ b/ReversiApp/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewData["Title"] - ReversiApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="~/css/style.css" rel="stylesheet" />
+    <script src="~/js/vendor.js"></script>
+    <script src="~/js/Chart.min.js"></script>
+    <script src="~/js/templates.js"></script>
     <script src="~/js/app.js"></script>
 </head>
 <body>
