--- a/ReversiApp/Views/Home/Game.cshtml
+++ b/ReversiApp/Views/Home/Game.cshtml
@@ -3,9 +3,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Game</h1>
 <button type="button" data-target="#myModal" data-toggle="modal" class="btn btn-success">Terug naar overzicht</button>
 
+<div class="hit-the-floor">Reversi</div>
 
 <div class="score" id="scorebord"></div>
 <div class="board" id="bord"></div>
