--- a/ReversiApp/Views/Home/Game.cshtml
+++ b/ReversiApp/Views/Home/Game.cshtml
@@ -8,7 +8,7 @@
 <div class="hit-the-floor">Reversi</div>
 
 <div class="score" id="scorebord"></div>
-<div class="board" id="bord"></div>
+<div id="bord"></div>
 <div class="footer">
     <div id="description"></div>
     <h4>Spelregels</h4>
@@ -19,6 +19,8 @@
         Als je geen legale zet kan maken of, je kan geen stukken nemen van je tegenstander. Dan moet je passen. En is het de beurt aan je tegenstander.
         Als geen van de spelers nog een stuk kunnen plaatsten, is het spel over en wint de speler met de meeste stukken.
     </p>
+
+    <div id="joke"></div>
 
     <div id="chart"></div>
 </div>
